Verificando tags de forma assincrona

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,8 @@ main {
 .main-image {
     border-radius: 8px;
     height: 100%;
+
+    /* Redimensiona a imagem sem deixar espaços em branco no container mas sem perder sua proporção */
     object-fit: cover;
 }
 
